# exactly

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: compile_time.rs
exactly/: Cargo.toml
exactly/src/: float.rs  int.rs  lib.rs  macros.rs
exactly/src/macros/: int.rs
exactly/tests/: tests.rs
funny/: Cargo.toml
funny/benches/: compile_time.rs
funny/src/: lib.rs  macros.rs
funny/tests/: tests.rs
src/: base.rs  const_helpers.rs  float.rs  int.rs  lib.rs  macros.rs  set.rs  spec.rs  spec_at_home.rs  sure_eq.rs
src/base/: base_macros.rs
src/macros/: float.rs  int.rs  mod.rs
tests/: tests.rs
type_const_math/: Cargo.toml
type_const_math/src/: lib.rs
