[package]
name = "exactly"
version = "0.1.0"
edition = "2024"

[features]
bench_compile_time = []

[dependencies]


[[bench]]
name = "compile_time"
path = "benches/compile_time.rs"
harness = false

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true
