[package]
name = "sure"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
repository = "https://github.com/lars-schumann/sure"
# homepage = ""
readme = "README.md"
description = "Numeric refinement types"
keywords = []

[features]
bench_compile_time = []

[dependencies]


[[bench]]
name = "compile_time"
path = "benches/compile_time.rs"
harness = false
